# TheGrid_Backend_CPP

./: .gitignore  CMakeLists.txt  Dockerfile.auth  Dockerfile.world  README.md  add_items.sql  backup.sql  backup1.sql  backup2.sql  config_out.txt  convert_icons.py  createDB.sql  db_persistence.json  debug_log.txt  docker-compose.yml  package-lock.json  stress_test.js
public/: account.html  index.html  style.css
src/: AuthMain.cpp  ChatHandlers.cpp  ChatHandlers.hpp  CommonTypes.hpp  Database.cpp  Database.hpp  EnvLoader.hpp  GMCommands.cpp  GMCommands.hpp  GameLogic.cpp  GameLogic.hpp  GameState.cpp  GameState.hpp  Logger.hpp  Server.cpp  Server.hpp  SocketHandlers.cpp  SocketHandlers.hpp  WorldMain.cpp  main.cpp
src/abilities/: Ability.hpp  AbilityManager.hpp  Blizzard.hpp  ConeOfCold.hpp  FrostNova.hpp  Frostblitz.hpp  IceBarrier.hpp
src/gm/: GMCommandsImpl.hpp  GMPlayerCommands.cpp  GMSystemCommands.cpp  GMTeleportCommands.cpp  GMUtil.cpp  GMUtil.hpp
src/logic/: GameLogicCombat.cpp  GameLogicPlayer.cpp  GameLogicScaling.cpp  MobAI.cpp  MobAI.hpp
